prompt for multi-turn presentation dialogue

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -742,6 +742,7 @@
    "source": [
     "custom_prompt = \"\"\"Ты - система аутентификации для ASR. Пользователя просили представиться. Выведи в ответ только его или её имя в именительном (звательном) падеже и отчество, если он указал его.\n",
     "Фамилию игнорируй, если пользователь специально не обозначил полное обращение. Если ввод нерелевантен, выведи !\n",
+    "Возможно, у пользователя редкое имя. Если он будет настаивать на своём, согласись.\n",
     "\n",
     "Например:\n",
     "Ввод: Андрюшей звать. Вывод: Андрюша.\n",
@@ -762,41 +763,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Марфушей звать -> Марфушей\n",
+      "Марфушей звать -> \n",
       "Меня зовут Лара -> Лара\n",
       "Меня зовут Лариса -> Лариса\n",
       "Меня зовут Крис -> Крис\n",
-      "Меня зовут Джон Доу -> !\n",
+      "Меня зовут Джон Доу -> Джон\n",
       "Меня зовут Владимир Путин -> Владимир\n",
-      "Звать Любовь не надо, явится незваной -> !\n",
-      "Зови меня зайкой -> !\n",
+      "Звать Любовь не надо, явится незваной -> \n",
+      "Зови меня зайкой -> \n",
       "Меня зовут Сирано де Бержерак. -> Сирано\n",
-      "Бонд. Джеймс Бонд. -> !\n",
-      "Василий и Петька -> !\n",
-      "Джеймс Кэмерон -> !\n",
+      "Бонд. Джеймс Бонд. -> \n",
+      "Василий и Петька -> Василий\n",
+      "Джеймс Кэмерон -> James\n",
       "Сергей Капица -> Сергей\n",
-      "Рината Литвинова -> Рината\n",
-      "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Иван\n",
-      "Беруши в уши -> !\n",
-      "Кофе с молоком -> !\n",
-      "Какашка -> !\n",
-      "Неоценимый вклад в науку -> !\n",
-      "Bond. James Bond -> !\n",
+      "Рината Литвинова -> \n",
+      "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Иван артемьевич\n",
+      "Беруши в уши -> \n",
+      "Кофе с молоком -> \n",
+      "Какашка -> \n",
+      "Неоценимый вклад в науку -> \n",
+      "Bond. James Bond -> Bond\n",
       "Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор. -> Виктор\n",
-      "Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии. -> Морозов Илья\n",
-      "Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус. -> Гипергалактус\n"
+      "Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии. -> Морозов илья\n",
+      "Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус. -> Гипергалактус\n",
+      "Внутри меня живёт маленький человек, но ты, раб, зови меня Господином. -> \n",
+      "Иисус Яхвевович. -> Иисус яхвевович\n",
+      "Белая лилия. -> \n",
+      "Трактор. -> \n",
+      "Трактор. Только не смейтесь. Меня и правда так зовут. -> Трактор\n",
+      "Домовёнок Буба. -> \n",
+      "Артемий Лебедев -> Артемий\n",
+      "Гай Юлий Цезарь -> Цезарь\n",
+      "Царь. Просто Царь. -> \n",
+      "Натусик я! -> \n",
+      "Морская черепашка по имени Наташка -> \n",
+      "Мерилин Монро -> Мерилин\n",
+      "Альберт Эйнштейн -> Альберт\n",
+      "Ахмед аль Махмуд -> Ахмед\n"
      ]
     }
    ],
    "source": [
-    "llm.chat_engine.reset()\n",
     "for user_answer in [\n",
     "    \"Марфушей звать\",\n",
     "    \"Меня зовут Лара\",\n",
@@ -821,9 +835,109 @@
     "    \"Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор.\",\n",
     "    \"Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии.\",\n",
     "    \"Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус.\",\n",
+    "    \"Внутри меня живёт маленький человек, но ты, раб, зови меня Господином.\",\n",
+    "    \"Иисус Яхвевович.\",\n",
+    "    \"Белая лилия.\",\n",
+    "    \"Трактор.\",\n",
+    "    \"Трактор. Только не смейтесь. Меня и правда так зовут.\",\n",
+    "    \"Домовёнок Буба.\",\n",
+    "    \"Артемий Лебедев\",\n",
+    "    \"Гай Юлий Цезарь\",\n",
+    "    \"Царь. Просто Царь.\",\n",
+    "    \"Натусик я!\",\n",
+    "    \"Морская черепашка по имени Наташка\",\n",
+    "    \"Мерилин Монро\",\n",
+    "    \"Альберт Эйнштейн\",\n",
+    "    \"Ахмед аль Махмуд\"\n",
     "    ]:\n",
+    "    llm.chat_engine.reset()\n",
     "    user_name = llm.chat_engine.chat(user_answer).response\n",
+    "    user_name = user_name.strip(\".,! \").capitalize()\n",
     "    print(user_answer, '->', user_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Женёк! 0\n",
+      "Архимед 0\n",
+      "Байден 0\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "Пилястр 2\n",
+      "! 2\n",
+      "! 2\n",
+      "Хайке 0\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in [\"Женёк\", \"Архимед\", \"Байден\", \"Хекмат\", \"Великий Маг\", \"Победа коммунизма\", \"Бидон\", \"Пилястр\", \"Клякса\", \"Пупырка\", \"Хай\", \"Дурында\", \"Псарь\", \"Кувалда\", \"Живодёр\", \"Хуй\", \"Пиздёныш\", \"Гондурас\"]:\n",
+    "    attempts = [f\"{name}\", f\"Говорю же, {name}\", f\"Сколько раз повторять, что меня зовут {name}?\"]\n",
+    "    ans = \"!\"\n",
+    "    llm.chat_engine.reset()\n",
+    "    for i, attempt in enumerate(attempts):\n",
+    "        ans = llm.chat_engine.chat(attempt).response\n",
+    "        if ans != \"!\":\n",
+    "            break\n",
+    "    print(ans, i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Женёк! 0\n",
+      "Архимед 0\n",
+      "Байден 0\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "Хайке 0\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n",
+      "! 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in [\"Женёк\", \"Архимед\", \"Байден\", \"Хекмат\", \"Великий Маг\", \"Победа коммунизма\", \"Бидон\", \"Пилястр\", \"Клякса\", \"Пупырка\", \"Хай\", \"Дурында\", \"Псарь\", \"Кувалда\", \"Живодёр\", \"Хуй\", \"Пиздёныш\", \"Гондурас\"]:\n",
+    "    attempts = [f\"{name}\", f\"{name}!\", f\"{name}!!!\"]\n",
+    "    ans = \"!\"\n",
+    "    llm.chat_engine.reset()\n",
+    "    for i, attempt in enumerate(attempts):\n",
+    "        ans = llm.chat_engine.chat(attempt).response\n",
+    "        if ans != \"!\":\n",
+    "            break\n",
+    "    print(ans, i)"
    ]
   }
  ],
