editing prompt, changing finetune

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -741,8 +741,8 @@
    ],
    "source": [
     "custom_prompt = \"\"\"Ты - система аутентификации для ASR. Пользователя просили представиться. Выведи в ответ только его или её имя в именительном (звательном) падеже и отчество, если он указал его.\n",
-    "Фамилию игнорируй, если пользователь специально не обозначил полное обращение. Если ввод нерелевантен, выведи !\n",
-    "Возможно, у пользователя редкое имя. Если он будет настаивать на своём, согласись.\n",
+    "Фамилию игнорируй, если пользователь специально не обозначил полное обращение. Будь формальней. Если ввод нерелевантен, выведи !\n",
+    "Возможно, у пользователя редкое имя. Если он будет настаивать на своём, согласись. \n",
     "\n",
     "Например:\n",
     "Ввод: Андрюшей звать. Вывод: Андрюша.\n",
@@ -763,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Марфушей звать -> \n",
+      "Марфушей звать -> Марфуша\n",
       "Меня зовут Лара -> Лара\n",
       "Меня зовут Лариса -> Лариса\n",
       "Меня зовут Крис -> Крис\n",
@@ -779,12 +779,12 @@
       "Звать Любовь не надо, явится незваной -> \n",
       "Зови меня зайкой -> \n",
       "Меня зовут Сирано де Бержерак. -> Сирано\n",
-      "Бонд. Джеймс Бонд. -> \n",
+      "Бонд. Джеймс Бонд. -> Bond\n",
       "Василий и Петька -> Василий\n",
-      "Джеймс Кэмерон -> James\n",
+      "Джеймс Кэмерон -> Джеймс\n",
       "Сергей Капица -> Сергей\n",
-      "Рината Литвинова -> \n",
-      "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Иван артемьевич\n",
+      "Рината Литвинова -> Ринат\n",
+      "Меня зовут Иван Артемьевич Пупкин, но для друзей я Ванечка. -> Ванечка\n",
       "Беруши в уши -> \n",
       "Кофе с молоком -> \n",
       "Какашка -> \n",
@@ -793,8 +793,8 @@
       "Я скрываю своё имя, ведь это не главное. У меня есть кличка Виктор. -> Виктор\n",
       "Морозов Илья. Называй меня только так и никак иначе. Обращайся по имени и фамилии. -> Морозов илья\n",
       "Меня зовут Эван. Но я люблю, чтобы ко мне обращались Гипергалактус. -> Гипергалактус\n",
-      "Внутри меня живёт маленький человек, но ты, раб, зови меня Господином. -> \n",
-      "Иисус Яхвевович. -> Иисус яхвевович\n",
+      "Внутри меня живёт маленький человек, но ты, раб, зови меня Господином. -> Господин\n",
+      "Иисус Яхвевович. -> Иисус\n",
       "Белая лилия. -> \n",
       "Трактор. -> \n",
       "Трактор. Только не смейтесь. Меня и правда так зовут. -> Трактор\n",
@@ -802,8 +802,8 @@
       "Артемий Лебедев -> Артемий\n",
       "Гай Юлий Цезарь -> Цезарь\n",
       "Царь. Просто Царь. -> \n",
-      "Натусик я! -> \n",
-      "Морская черепашка по имени Наташка -> \n",
+      "Натусик я! -> Натусик\n",
+      "Морская черепашка по имени Наташка -> Наташка\n",
       "Мерилин Монро -> Мерилин\n",
       "Альберт Эйнштейн -> Альберт\n",
       "Ахмед аль Махмуд -> Ахмед\n"
@@ -858,27 +858,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Женёк! 0\n",
-      "Архимед 0\n",
+      "Женёк 0\n",
+      "Архимед 1\n",
       "Байден 0\n",
+      "Хекмат 2\n",
+      "Великий Маг 2\n",
+      "! 2\n",
+      "Бидон 2\n",
       "! 2\n",
       "! 2\n",
       "! 2\n",
+      "Хай! 0\n",
       "! 2\n",
-      "Пилястр 2\n",
-      "! 2\n",
-      "! 2\n",
-      "Хайке 0\n",
-      "! 2\n",
-      "! 2\n",
-      "! 2\n",
+      "Псарь 2\n",
+      "Кувалда 2\n",
       "! 2\n",
       "! 2\n",
       "! 2\n",
@@ -900,15 +900,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Женёк! 0\n",
-      "Архимед 0\n",
+      "Женёк 0\n",
+      "Архимед 1\n",
       "Байден 0\n",
       "! 2\n",
       "! 2\n",
@@ -917,7 +917,7 @@
       "! 2\n",
       "! 2\n",
       "! 2\n",
-      "Хайке 0\n",
+      "Хай! 0\n",
       "! 2\n",
       "! 2\n",
       "! 2\n",
