--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -955,237 +955,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Одна́жды в студё́ную зи́мнюю по́ру'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generate replacements\n",
+    "letters = 'аэыоуяеиёюAЭЫОУЯЕИЁЮ'\n",
+    "replacements = {'+' + letter: (letter.encode(\"utf-8\") + b'\\xcc\\x81').decode(\"utf-8\") for letter in letters}\n",
+    "\n",
+    "def apply_replacemenent(sentence, mapping):\n",
+    "    res = sentence\n",
+    "    for k, v in mapping.items():\n",
+    "        res = res.replace(k, v)\n",
+    "    return res\n",
+    "\n",
+    "apply_replacemenent(\"Одн+ажды в студ+ёную з+имнюю п+ору\", replacements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 2.1362e-04, -1.8311e-04,  1.2207e-04,  ..., -6.1035e-05,\n",
-      "          6.1035e-05, -6.1035e-05]]) 24000\n"
+      " > tts_models/multilingual/multi-dataset/xtts_v2 is already downloaded.\n",
+      " > Using model: xtts\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/TTS/tts/layers/xtts/xtts_manager.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  self.speakers = torch.load(speaker_file_path)\n",
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/TTS/utils/io.py:54: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  return torch.load(f, map_location=map_location, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > Text splitted to sentences.\n",
+      "['Привет!', 'Меня зовут Кристина Зипо, и я участвую в разработке аватара Сергея Петровича Капитсы.', 'Я отвечаю за языковую модель, а также распознавание и генерацию аудио.', 'В основе нашего аватара лежит языковая модель ллама три.', 'Я дообучила её на интервью Сергея Петровича, а также составила подходящий промпт.', 'Для распознавания аудио я использовала модель Виспер,', 'а для генерации - файнтьюн Икс ТТС два на данных из аудио-лекций Сергея Петровича.', 'Благодаря этому Сергей Петрович умеет не только думать, но и слышать и говорить.']\n",
+      " > Processing time: 4.906266450881958\n",
+      " > Real-time factor: 0.10098949176457311\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'test.wav'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torchaudio\n",
-    "data, sr = torchaudio.load(\"files/bad_ending1.wav\")\n",
-    "print(data, sr)"
+    "from TTS.api import TTS\n",
+    "tts = TTS(\"tts_models/multilingual/multi-dataset/xtts_v2\").to(\"cuda\")\n",
+    "tts.tts_to_file(text=\"\"\"Привет! Меня зовут Кристина Зиипа, и я участвую в разработке аватара Сергея Петровича Капитсы.\n",
+    "Я отвечаю за языковую модель, а также распознавание и генерацию звука.\n",
+    "В основе нашего аватара лежит языковая модель ллама три.\n",
+    "Я дообучила её на интервью Сергея Петровича, а также составила подходящий промпт.\n",
+    "Для распознавания аудио я использовала модель Виспер, а для генерации - файнтьюн Икс Те Те Эс два на данных из аудио-лекций Сергея Петровича.\n",
+    "Благодаря этому Сергей Петрович умеет не только думать, но и слышать и говорить.\"\"\",\n",
+    "speaker_wav=\"/home/zipa/Downloads/script1.wav\", language=\"ru\", file_path=\"test.wav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Speech embedding on SpeechT5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  5.66it/s]\n"
+      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import random\n",
-    "from glob import glob\n",
-    "from typing import List, Optional, Union, Dict\n",
-    "\n",
-    "import tqdm\n",
+    "from transformers import pipeline\n",
+    "from datasets import load_dataset\n",
+    "import soundfile as sf\n",
     "import torch\n",
-    "import torchaudio\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch.nn import functional as F\n",
-    "from transformers import (\n",
-    "    AutoFeatureExtractor,\n",
-    "    AutoModelForAudioClassification,\n",
-    "    Wav2Vec2Processor\n",
-    ")\n",
     "\n",
-    "class CustomDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        dataset: List,\n",
-    "        basedir: Optional[str] = None,\n",
-    "        sampling_rate: int = 16000,\n",
-    "        max_audio_len: int = 5,\n",
-    "    ):\n",
-    "        self.dataset = dataset\n",
-    "        self.basedir = basedir\n",
+    "model_source = \"voxxer/speecht5_finetuned_commonvoice_ru_translit\" # \"microsoft/speecht5_tts\"\n",
+    "synthesiser = pipeline(\"text-to-speech\", model_source)\n",
     "\n",
-    "        self.sampling_rate = sampling_rate\n",
-    "        self.max_audio_len = max_audio_len\n",
+    "embeddings_dataset = load_dataset(\"Matthijs/cmu-arctic-xvectors\", split=\"validation\")\n",
+    "speaker_embedding = torch.tensor(embeddings_dataset[7306][\"xvector\"]).unsqueeze(0) # 512-length vector\n",
+    "# You can replace this embedding with your own as well.\n",
+    "speech = synthesiser(\"Privet! Kak zhizn?\", forward_params={\"speaker_embeddings\": speaker_embedding})\n",
     "\n",
-    "    def __len__(self):\n",
-    "        \"\"\"\n",
-    "        Return the length of the dataset\n",
-    "        \"\"\"\n",
-    "        return len(self.dataset)\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        if self.basedir is None:\n",
-    "            filepath = self.dataset[index]\n",
-    "        else:\n",
-    "            filepath = os.path.join(self.basedir, self.dataset[index])\n",
-    "\n",
-    "        speech_array, sr = torchaudio.load(filepath)\n",
-    "\n",
-    "        if speech_array.shape[0] > 1:\n",
-    "            speech_array = torch.mean(speech_array, dim=0, keepdim=True)\n",
-    "\n",
-    "        if sr != self.sampling_rate:\n",
-    "            transform = torchaudio.transforms.Resample(sr, self.sampling_rate)\n",
-    "            speech_array = transform(speech_array)\n",
-    "            sr = self.sampling_rate\n",
-    "\n",
-    "        len_audio = speech_array.shape[1]\n",
-    "\n",
-    "        # Pad or truncate the audio to match the desired length\n",
-    "        if len_audio < self.max_audio_len * self.sampling_rate:\n",
-    "            # Pad the audio if it's shorter than the desired length\n",
-    "            padding = torch.zeros(1, self.max_audio_len * self.sampling_rate - len_audio)\n",
-    "            speech_array = torch.cat([speech_array, padding], dim=1)\n",
-    "        else:\n",
-    "            # Truncate the audio if it's longer than the desired length\n",
-    "            speech_array = speech_array[:, :self.max_audio_len * self.sampling_rate]\n",
-    "\n",
-    "        speech_array = speech_array.squeeze().numpy()\n",
-    "\n",
-    "        return {\"input_values\": speech_array, \"attention_mask\": None}\n",
-    "\n",
-    "\n",
-    "class CollateFunc:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        processor: Wav2Vec2Processor,\n",
-    "        padding: Union[bool, str] = True,\n",
-    "        pad_to_multiple_of: Optional[int] = None,\n",
-    "        return_attention_mask: bool = True,\n",
-    "        sampling_rate: int = 16000,\n",
-    "        max_length: Optional[int] = None,\n",
-    "    ):\n",
-    "        self.sampling_rate = sampling_rate\n",
-    "        self.processor = processor\n",
-    "        self.padding = padding\n",
-    "        self.pad_to_multiple_of = pad_to_multiple_of\n",
-    "        self.return_attention_mask = return_attention_mask\n",
-    "        self.max_length = max_length\n",
-    "\n",
-    "    def __call__(self, batch: List[Dict[str, np.ndarray]]):\n",
-    "        # Extract input_values from the batch\n",
-    "        input_values = [item[\"input_values\"] for item in batch]\n",
-    "\n",
-    "        batch = self.processor(\n",
-    "            input_values,\n",
-    "            sampling_rate=self.sampling_rate,\n",
-    "            return_tensors=\"pt\",\n",
-    "            padding=self.padding,\n",
-    "            max_length=self.max_length,\n",
-    "            pad_to_multiple_of=self.pad_to_multiple_of,\n",
-    "            return_attention_mask=self.return_attention_mask\n",
-    "        )\n",
-    "\n",
-    "        return {\n",
-    "            \"input_values\": batch.input_values,\n",
-    "            \"attention_mask\": batch.attention_mask if self.return_attention_mask else None\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "def predict(test_dataloader, model, device: torch.device):\n",
-    "    \"\"\"\n",
-    "    Predict the class of the audio\n",
-    "    \"\"\"\n",
-    "    model.to(device)\n",
-    "    model.eval()\n",
-    "    preds = []\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for batch in tqdm.tqdm(test_dataloader):\n",
-    "            input_values, attention_mask = batch['input_values'].to(device), batch['attention_mask'].to(device)\n",
-    "\n",
-    "            logits = model(input_values, attention_mask=attention_mask).logits\n",
-    "            scores = F.softmax(logits, dim=-1)\n",
-    "\n",
-    "            pred = torch.argmax(scores, dim=1).cpu().detach().numpy()\n",
-    "\n",
-    "            preds.extend(pred)\n",
-    "\n",
-    "    return preds\n",
-    "\n",
-    "\n",
-    "def get_gender(model_name_or_path: str, audio_paths: List[str], label2id: Dict, id2label: Dict, device: torch.device):\n",
-    "    num_labels = 2\n",
-    "\n",
-    "    feature_extractor = AutoFeatureExtractor.from_pretrained(model_name_or_path)\n",
-    "    model = AutoModelForAudioClassification.from_pretrained(\n",
-    "        pretrained_model_name_or_path=model_name_or_path,\n",
-    "        num_labels=num_labels,\n",
-    "        label2id=label2id,\n",
-    "        id2label=id2label,\n",
-    "    )\n",
-    "\n",
-    "    test_dataset = CustomDataset(audio_paths, max_audio_len=5)  # for 5-second audio\n",
-    "\n",
-    "    data_collator = CollateFunc(\n",
-    "        processor=feature_extractor,\n",
-    "        padding=True,\n",
-    "        sampling_rate=16000,\n",
-    "    )\n",
-    "\n",
-    "    test_dataloader = DataLoader(\n",
-    "        dataset=test_dataset,\n",
-    "        batch_size=16,\n",
-    "        collate_fn=data_collator,\n",
-    "        shuffle=False,\n",
-    "        num_workers=2\n",
-    "    )\n",
-    "\n",
-    "    preds = predict(test_dataloader=test_dataloader, model=model, device=device)\n",
-    "\n",
-    "    return preds\n",
-    "\n",
-    "model_name_or_path = \"alefiury/wav2vec2-large-xlsr-53-gender-recognition-librispeech\"\n",
-    "\n",
-    "audio_paths = [] # Must be a list with absolute paths of the audios that will be used in inference\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "label2id = {\n",
-    "    \"female\": 0,\n",
-    "    \"male\": 1\n",
-    "}\n",
-    "\n",
-    "id2label = {\n",
-    "    0: \"female\",\n",
-    "    1: \"male\"\n",
-    "}\n",
-    "\n",
-    "num_labels = 2\n",
-    "\n",
-    "preds = get_gender(model_name_or_path, [\"files/test.wav\", \"files/name1.m4a\", \"files/color.m4a\", \"files/bad_ending1.wav\"], label2id, id2label, device)"
+    "sf.write(\"speech.wav\", speech[\"audio\"], samplerate=speech[\"sampling_rate\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 0, 0, 1]"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preds"
+    "# использование NeMo\n",
+    "# https://github.com/bene-ges/nemo_compatible/blob/main/notebooks/Russian_TTS_with_IPA_G2P_FastPitch_and_HifiGAN.ipynb\n",
+    "# тут товарищ дообучил на своём голосе на 7 миллиардах (по фонемам с учётом ударений)\n",
+    "# нужно посмотреть на качество и, если ок, повторить для Капицы\n"
    ]
   }
  ],
