text processing through folder has been added

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -1087,6 +1087,34 @@
     "# тут товарищ дообучил на своём голосе на 7 миллиардах (по фонемам с учётом ударений)\n",
     "# нужно посмотреть на качество и, если ок, повторить для Капицы\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../prompt.txt') as f:\n",
+    "    _x = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
