--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -1193,6 +1193,95 @@
     "else:\n",
     "    print('not found')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = 'sdfsdf!'\n",
+    "sum(1 for c in test if ord('a') <= ord(c) <= ord('z') or ord('A') <= ord(c) <= ord('Z') or ord('а') <= ord(c) <= ord('я') or ord('А') <= ord(c) <= ord('Я'))\n",
+    "# print(test.translate(str.maketrans({key:'' for key in '.,;?!- '})))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello Science News Explores readers!', 'I am a digital clone of Sergey Kapitsa.', 'He was a famous scientist who passed away in 2012.', 'Now, artificial intelligence has made it possible to mimic his voice and likeness.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "# Python 3.12\n",
+    "# from itertools import batched\n",
+    "text = \"\"\"Hello Science News Explores readers! I am a digital clone of Sergey Kapitsa. He was a famous scientist who passed away in 2012. Now, artificial intelligence has made it possible to mimic his voice and likeness.\"\"\"\n",
+    "sentence_list = [s.strip(' ') for s in re.split(\"(\\.|!|\\?)\", text) if len(s)]\n",
+    "sentence_list = [sentence_list[i] + sentence_list[i + 1] for i in range(0, len(sentence_list), 2)]\n",
+    "print(sentence_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "\n",
+    "class KillableThread(threading.Thread):\n",
+    "    def __init__(self, sleep_interval=1):\n",
+    "        super().__init__()\n",
+    "        self._kill = threading.Event()\n",
+    "        self._interval = sleep_interval\n",
+    "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            print(\"Do Something\")\n",
+    "\n",
+    "            # If no kill signal is set, sleep for the interval,\n",
+    "            # If kill signal comes in while sleeping, immediately\n",
+    "            #  wake up and handle\n",
+    "            is_killed = self._kill.wait(self._interval)\n",
+    "            if is_killed:\n",
+    "                break\n",
+    "\n",
+    "        print(\"Killing Thread\")\n",
+    "\n",
+    "    def kill(self):\n",
+    "        self._kill.set()\n",
+    "        \n",
+    "import time\n",
+    "t = KillableThread(sleep_interval=0.1)\n",
+    "t.start()\n",
+    "time.sleep(1)\n",
+    "t.kill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
