--- a/_experiments/pyauadio_stream.ipynb
+++ b/_experiments/pyauadio_stream.ipynb
@@ -1190,6 +1190,327 @@
    "source": [
     "audio[:1, :].shape, audio.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "You are attempting to use Flash Attention 2.0 with a model not initialized on GPU. Make sure to move the model to GPU after initializing it on CPU with `model.to('cuda')`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mRunning on torch 2.4.1+cu124\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mRunning on host zipa-Z790-Pro-RS-WiFi\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mLoading model settings of DeepFilterNet3\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mUsing DeepFilterNet3 model at /home/zipa/.cache/DeepFilterNet/DeepFilterNet3\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mInitializing model `deepfilternet3`\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mFound checkpoint /home/zipa/.cache/DeepFilterNet/DeepFilterNet3/checkpoints/model_120.ckpt.best with epoch 120\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mRunning on device cpu\u001b[0m\n",
+      "\u001b[32m2024-11-27 13:35:17\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mDF\u001b[0m | \u001b[1mModel loaded\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fatal: not a git repository (or any of the parent directories): .git\n",
+      "Due to a bug fix in https://github.com/huggingface/transformers/pull/28687 transcription using a multilingual Whisper will default to language detection followed by transcription instead of translation to English.This might be a breaking change for your use case. If you want to instead always translate your audio to English, make sure to pass `language='en'`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Enhancer\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Passing a tuple of `past_key_values` is deprecated and will be removed in Transformers v4.43.0. You should pass an instance of `EncoderDecoderCache` instead, e.g. `past_key_values=EncoderDecoderCache.from_legacy_cache(past_key_values)`.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASR detected:  Меня зовут Кристина.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Меня зовут Кристина.\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.asr import ASRProcessor\n",
+    "asr = ASRProcessor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Enhancer\n",
+      "ASR detected:  тревожным чувством берусь я заперла\n",
+      "\n",
+      " тревожным чувством берусь я заперла\n",
+      "\n",
+      "CPU times: user 1.79 s, sys: 0 ns, total: 1.79 s\n",
+      "Wall time: 303 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "print(asr.get_text('_experiments/test.wav'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NeMo I 2024-11-27 13:45:27 nemo_logging:393] Tokenizer SentencePieceTokenizer initialized with 1024 tokens\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NeMo W 2024-11-27 13:45:27 nemo_logging:405] If you intend to do training or fine-tuning, please call the ModelPT.setup_training_data() method and provide a valid configuration file to setup the train data loader.\n",
+      "    Train config : \n",
+      "    manifest_filepath: null\n",
+      "    sample_rate: 16000\n",
+      "    batch_size: 16\n",
+      "    shuffle: true\n",
+      "    num_workers: 8\n",
+      "    pin_memory: true\n",
+      "    use_start_end_token: false\n",
+      "    trim_silence: false\n",
+      "    max_duration: 20.0\n",
+      "    min_duration: 0.1\n",
+      "    is_tarred: false\n",
+      "    tarred_audio_filepaths: null\n",
+      "    shuffle_n: 2048\n",
+      "    bucketing_strategy: synced_randomized\n",
+      "    bucketing_batch_size: null\n",
+      "    bucketing_weights: ''\n",
+      "    \n",
+      "[NeMo W 2024-11-27 13:45:27 nemo_logging:405] If you intend to do validation, please call the ModelPT.setup_validation_data() or ModelPT.setup_multiple_validation_data() method and provide a valid configuration file to setup the validation data loader(s). \n",
+      "    Validation config : \n",
+      "    manifest_filepath: null\n",
+      "    sample_rate: 16000\n",
+      "    batch_size: 16\n",
+      "    shuffle: false\n",
+      "    num_workers: 8\n",
+      "    pin_memory: true\n",
+      "    use_start_end_token: false\n",
+      "    \n",
+      "[NeMo W 2024-11-27 13:45:27 nemo_logging:405] Please call the ModelPT.setup_test_data() or ModelPT.setup_multiple_test_data() method and provide a valid configuration file to setup the test data loader(s).\n",
+      "    Test config : \n",
+      "    manifest_filepath: null\n",
+      "    sample_rate: 16000\n",
+      "    batch_size: 16\n",
+      "    shuffle: false\n",
+      "    num_workers: 8\n",
+      "    pin_memory: true\n",
+      "    use_start_end_token: false\n",
+      "    \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NeMo I 2024-11-27 13:45:27 nemo_logging:393] PADDING: 0\n",
+      "[NeMo I 2024-11-27 13:45:28 nemo_logging:393] Using RNNT Loss : warprnnt_numba\n",
+      "    Loss warprnnt_numba_kwargs: {'fastemit_lambda': 0.0, 'clamp': -1.0}\n",
+      "[NeMo I 2024-11-27 13:45:28 nemo_logging:393] Using RNNT Loss : warprnnt_numba\n",
+      "    Loss warprnnt_numba_kwargs: {'fastemit_lambda': 0.0, 'clamp': -1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NeMo W 2024-11-27 13:45:28 nemo_logging:405] No conditional node support for Cuda.\n",
+      "    Cuda graphs with while loops are disabled, decoding speed will be slower\n",
+      "    Reason: No `cuda-python` module. Please do `pip install cuda-python>=12.3`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NeMo I 2024-11-27 13:45:28 nemo_logging:393] Using RNNT Loss : warprnnt_numba\n",
+      "    Loss warprnnt_numba_kwargs: {'fastemit_lambda': 0.0, 'clamp': -1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NeMo W 2024-11-27 13:45:28 nemo_logging:405] No conditional node support for Cuda.\n",
+      "    Cuda graphs with while loops are disabled, decoding speed will be slower\n",
+      "    Reason: No `cuda-python` module. Please do `pip install cuda-python>=12.3`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NeMo I 2024-11-27 13:45:28 nemo_logging:393] Model EncDecRNNTBPEModel was successfully restored from /home/zipa/.cache/huggingface/hub/models--nvidia--stt_ru_conformer_transducer_large/snapshots/687d02db291e931455cf321abd625ef2b7f0b1a9/stt_ru_conformer_transducer_large.nemo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nemo.collections.asr as nemo_asr\n",
+    "asr_model = nemo_asr.models.EncDecRNNTBPEModel.from_pretrained(\"nvidia/stt_ru_conformer_transducer_large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Transcribing: 100%|██████████| 1/1 [00:00<00:00, 13.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 167 ms, sys: 14.8 ms, total: 182 ms\n",
+      "Wall time: 82.1 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(['тревожным чувства беру все за первым'],\n",
+       " ['тревожным чувства беру все за первым'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "asr_model.transcribe('_experiments/test.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zipa/miniconda3/envs/kapitza/lib/python3.11/site-packages/speechbrain/utils/checkpoints.py:194: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state_dict = torch.load(path, map_location=device)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from speechbrain.inference.separation import SepformerSeparation as separator\n",
+    "import torchaudio\n",
+    "\n",
+    "source = 'speechbrain/sepformer-libri3mix'#\"speechbrain/sepformer-wsj02mix\"\n",
+    "model = separator.from_hparams(source=source, savedir='pretrained_models/sepformer-wsj02mix')\n",
+    "\n",
+    "# for custom file, change path\n",
+    "est_sources = model.separate_file(path='test.wav') \n",
+    "\n",
+    "torchaudio.save(\"source1hat.wav\", est_sources[:, :, 0].detach().cpu(), 8000)\n",
+    "torchaudio.save(\"source2hat.wav\", est_sources[:, :, 1].detach().cpu(), 8000)\n",
+    "torchaudio.save(\"source2hat.wav\", est_sources[:, :, 2].detach().cpu(), 8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/zipa/Data/TestCode2/talks/driver-ilyasov39s-sim-card-is-sealed.mp3 /media/zipa/Data/TestCode2/talks-wav/driver-ilyasov39s-sim-card-is-sealed.wav\n",
+      "/media/zipa/Data/TestCode2/talks/speech-from-the-book-quothammer-of-the-witchesquot.mp3 /media/zipa/Data/TestCode2/talks-wav/speech-from-the-book-quothammer-of-the-witchesquot.wav\n",
+      "/media/zipa/Data/TestCode2/talks/two-female-friends-are-talking-on-the-phone.mp3 /media/zipa/Data/TestCode2/talks-wav/two-female-friends-are-talking-on-the-phone.wav\n",
+      "/media/zipa/Data/TestCode2/talks/two-employees-talking-on-the-phone-discuss-the-boss.mp3 /media/zipa/Data/TestCode2/talks-wav/two-employees-talking-on-the-phone-discuss-the-boss.wav\n",
+      "/media/zipa/Data/TestCode2/talks/textdownload-1024-mb-downloads-275-file-type-mp3.mp3 /media/zipa/Data/TestCode2/talks-wav/textdownload-1024-mb-downloads-275-file-type-mp3.wav\n",
+      "/media/zipa/Data/TestCode2/talks/recording-the-conversation-of-the-police-among-themselves-on-the-radio.mp3 /media/zipa/Data/TestCode2/talks-wav/recording-the-conversation-of-the-police-among-themselves-on-the-radio.wav\n",
+      "/media/zipa/Data/TestCode2/talks/husband-humiliates-himself-in-front-of-his-wife.mp3 /media/zipa/Data/TestCode2/talks-wav/husband-humiliates-himself-in-front-of-his-wife.wav\n",
+      "/media/zipa/Data/TestCode2/talks/communication-on-the-walkie-talkie-of-police-officers.mp3 /media/zipa/Data/TestCode2/talks-wav/communication-on-the-walkie-talkie-of-police-officers.wav\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in_dir='/media/zipa/Data/TestCode2/talks'\n",
+    "# out_dir='/media/zipa/Data/TestCode2/talks-wav'\n",
+    "# for in_file in os.listdir(in_dir):\n",
+    "#     in_f = os.path.join(in_dir, in_file)\n",
+    "#     out_f = os.path.join(out_dir, in_file[:-4]) + '.wav'\n",
+    "#     print(in_f, out_f)\n",
+    "#     wave, sr = torchaudio.load(in_f)\n",
+    "#     torchaudio.save(out_f, wave.cpu(), sr, encoding=\"PCM_S\", backend=\"soundfile\", bits_per_sample=16)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
