updates for cloned libraries

--- a/_experiments/demo.ipynb
+++ b/_experiments/demo.ipynb
@@ -1801,23 +1801,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from df.enhance import enhance, init_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cuda', index=0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
